# claude-devcontainer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  PRODUCT_REVIEW.md  PRODUCT_REVIEW_FIXES_SUMMARY.md  README.md  SUMMARY.md  TEST_FIX_IMPLEMENTATION.md  container_run.sh  pyproject.toml  run-claude-headless.sh  run-claude.sh
.claude/: settings.local.json
agent/: Dockerfile.agent  run-agent.sh
agent/review-agent/: run-review.sh
cld/: agent.py  cli.py  config.default.toml  config.py  docker.py  loop.py
cld/mcp/: graphql.py  orchestrator.py
cld/vcs/: __init__.py  base.py  detect.py  git.py  jj.py
docs/: graphql-mcp.md  test-strategy.md
imgs/claude-agent/: Dockerfile.claude-agent  agent-system-prompt.md  entrypoint-claude-agent.sh
imgs/claude-agent-review/: fix-mr.md  review-template.md
imgs/claude-base/: Dockerfile.claude-base  managed-settings.json
imgs/claude-devcontainer/: Dockerfile.claude-devcontainer  container-init.sh  entrypoint-claude-devcontainer.sh  vcs-lib.sh
prompts/: code-review.md  fix-conflicts.md  fix-pytest-files.md  graphql-mcp.md  implement-test-fixes.md  loop-review.md  parse-pytest-files.md  researcher.md  task-oxxqc5fc.md  team-leader.md  todo-agent.md
prompts/personas/: prompt-engineer.md
scripts/: run-claude-agent-review.sh  run-claude-agent.sh  run-claude-devcontainer.sh  split_failures.py
specs/: implement-review-loop-technical.md  implement-review-loop.md
tests/: conftest.py  test_agent.py  test_agent_e2e.py  test_cli.py  test_config.py  test_docker.py  test_docker_integration.py  test_loop.py  test_loop_e2e.py  test_orchestrator.py  test_review_e2e.py  test_vcs_detection.py  test_vcs_integration.py
(+10 files in other folders)
