[tool.poetry]
name = "cld"
version = "0.1.0"
description = "Tooling for running Claude Code in Docker containers with VCS workspace isolation (jujutsu or git)"
authors = []
packages = [{include = "cld"}]

[tool.poetry.scripts]
cld = "cld.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
mcp = {version = "^1.0", extras = ["cli"]}
typer = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
